// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusDescription component Shallow tests does not render subaccount details on master account domains 1`] = `
<Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <StatusLabel
        status="unverified"
      />
    </LabelledValue>
  </Panel.Section>
</Fragment>
`;

exports[`StatusDescription component Shallow tests renders subaccount details 1`] = `
<Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <StatusLabel
        status="unverified"
      />
    </LabelledValue>
  </Panel.Section>
  <Panel.Section>
    <LabelledValue
      label="Subaccount"
    >
      <SubaccountTag
        all={false}
        id={101}
        isDefault={false}
        master={false}
        receiveAll={false}
      />
    </LabelledValue>
  </Panel.Section>
</Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly blocked 1`] = `
<Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <StatusLabel
        status="blocked"
      />
    </LabelledValue>
  </Panel.Section>
</Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly pending 1`] = `
<Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <StatusLabel
        status="pending"
      />
    </LabelledValue>
  </Panel.Section>
</Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly unverified 1`] = `
<Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <StatusLabel
        status="unverified"
      />
    </LabelledValue>
  </Panel.Section>
</Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly verified 1`] = `
<Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <StatusLabel
        status="verified"
      />
      <div>
        <ReadyFor
          bounce={false}
          bounceDefault={false}
          dkim={false}
          sending={false}
        />
      </div>
    </LabelledValue>
  </Panel.Section>
</Fragment>
`;
